
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int errx (int,char*,int) ;
 int sleep (int) ;

__attribute__((used)) static void trigger(int intr)
{
 switch (intr) {
 case 0:
  do {
   int z = 1;
   int a = 1;

   z--;

   a /= z;
  } while (0);
  break;

 case 4:
  asm("int $4");
  break;

 case 0x80:
  asm("int $0x80");
  break;

 default:
  errx(1, "unknown intr %d", intr);
 }

 sleep(3);
}
