; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux_x86-64/local/extr_26131.c_trigger.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux_x86-64/local/extr_26131.c_trigger.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"unknown intr %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @trigger to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @trigger(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  switch i32 %5, label %16 [
    i32 0, label %6
    i32 4, label %14
    i32 128, label %15
  ]

6:                                                ; preds = %1
  br label %7

7:                                                ; preds = %6
  store i32 1, i32* %3, align 4
  store i32 1, i32* %4, align 4
  %8 = load i32, i32* %3, align 4
  %9 = add nsw i32 %8, -1
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* %4, align 4
  %12 = sdiv i32 %11, %10
  store i32 %12, i32* %4, align 4
  br label %13

13:                                               ; preds = %7
  br label %19

14:                                               ; preds = %1
  call void asm sideeffect "int $$4", "~{dirflag},~{fpsr},~{flags}"() #2, !srcloc !2
  br label %19

15:                                               ; preds = %1
  call void asm sideeffect "int $$0x80", "~{dirflag},~{fpsr},~{flags}"() #2, !srcloc !3
  br label %19

16:                                               ; preds = %1
  %17 = load i32, i32* %2, align 4
  %18 = call i32 @errx(i32 1, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %17)
  br label %19

19:                                               ; preds = %16, %15, %14, %13
  %20 = call i32 @sleep(i32 3)
  ret void
}

declare dso_local i32 @errx(i32, i8*, i32) #1

declare dso_local i32 @sleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 357}
!3 = !{i32 396}
